@@ -1,6 +1,7 @@
 package ru.yandex.practicum.filmorate.service;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Service;
 import ru.yandex.practicum.filmorate.exception.FilmValidationException;
 import ru.yandex.practicum.filmorate.exception.NotFoundException;
@@ -8,7 +9,8 @@ import ru.yandex.practicum.filmorate.model.Film;
 import ru.yandex.practicum.filmorate.storage.film.FilmStorage;
 import ru.yandex.practicum.filmorate.storage.user.UserStorage;
 
-import java.util.*;
+import java.util.List;
+import java.util.stream.Collectors;
 
 import static ru.yandex.practicum.filmorate.model.Film.RULE_FILM_DATE;
 
@@ -18,7 +20,8 @@ public class FilmService {
     private final UserStorage userStorage;
 
     @Autowired
-    public FilmService(FilmStorage filmStorage, UserStorage userStorage) {
+    public FilmService(@Qualifier("filmDbStorage") FilmStorage filmStorage,
+                       @Qualifier("userDbStorage") UserStorage userStorage) {
         this.filmStorage = filmStorage;
         this.userStorage = userStorage;
     }
@@ -46,7 +49,6 @@ public class FilmService {
 
     public void addLike(Long filmId, Long userId) {
         Film film = findById(filmId);
-        // Проверяем, что пользователь существует
         userStorage.findById(userId)
                 .orElseThrow(() -> new NotFoundException("Пользователь с id = " + userId + " не найден"));
 
@@ -56,7 +58,6 @@ public class FilmService {
 
     public void removeLike(Long filmId, Long userId) {
         Film film = findById(filmId);
-        // Проверяем, что пользователь существует
         userStorage.findById(userId)
                 .orElseThrow(() -> new NotFoundException("Пользователь с id = " + userId + " не найден"));
 
@@ -65,17 +66,10 @@ public class FilmService {
     }
 
     public List<Film> getPopularFilms(int count) {
-        List<Film> allFilms = filmStorage.findAll();
-
-        allFilms.sort((f1, f2) -> {
-            int likes1 = f1.getLikes().size();
-            int likes2 = f2.getLikes().size();
-            return Integer.compare(likes2, likes1); // Сортировка по убыванию
-        });
-
-        return allFilms.stream()
+        return filmStorage.findAll().stream()
+                .sorted((f1, f2) -> Integer.compare(f2.getLikes().size(), f1.getLikes().size()))
                 .limit(count)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public int getLikesCount(Long filmId) {
